--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.starwars.challenge" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".features.MainApplication"
         android:allowBackup="true"
@@ -9,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SwapiChallenge" >
+        android:theme="@style/Theme.SwapiChallenge"
+        android:usesCleartextTraffic="true">
         <activity android:name="com.starwars.challenge.features.search.presentation.ui.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
