--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SwapiChallenge"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/Theme.SwapiChallenge">
         <activity android:name="com.starwars.challenge.features.search.presentation.ui.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
